styles/containers/_page.scss
$line-height: 1.5rem !default;
$col-width: 1rem !default;
$navbar-height: $line-height * 2;
$footer-font-size: 0.75rem;

@mixin page-layout {
  @include size(100%, 100%);
  @include relative;
  @include flex-column;
  overflow-y: auto;
}

/*
** Page components
*/

@mixin page-block-element {
  @include flex-child-fixed;
  padding: $line-height/2 $col-width;
}

@mixin fixed-navbar () {
  @include fixed(0, 0, auto, 0);
  @include box-shadow(2);
  height: $navbar-height;
  z-index: 1000;

  & ~ header {
    margin-top: $navbar-height;
  }
}

@mixin page-components {
  > header, .page-header,
  > .content, .page-content,
  > aside, .page-aside,
  > footer, .page-footer {
    @include page-block-element;
  }

  > nav {
    @include flex-child-fixed;
    overflow-y: hidden;
    order: -99;
  }

  > header, .page-header { order: -98; }

  > .content, .page-content { order: 0; }

  > aside, .page-aside {
    order: 1;
    &.left { order: 1; }
    &.right { order: 2; }
  }

  > footer, .page-footer {
    order: 99;
    font-size: $footer-font-size;
  }

  @media (min-height: 60rem) {
    > nav {
      @include fixed-navbar;
    }
  }

  > nav.fixed {
    @include fixed-navbar;
  }

  @media (min-width: 40rem) {
    @include flex-rows;

    > nav,
    > header, .page-header,
    > .content, .page-content,
    > footer, .page-footer {
      @include flex-child-fluid($basis: 100%);
      overflow-x: hidden;
    }

    > aside, .page-aside {
      @include flex-child-fluid($basis: 50%);
    }
  }

  @media (min-width: 50rem) {
    > .content, .page-content {
      @include flex-child-fluid($basis: 0);
    }

    > aside, .page-aside {
      @include flex-child-fixed($basis: auto);
      order: -1;
      max-width: 10rem;

      &.left { order: -1; }
      &.right { order: 1; }
    }
  }

  @media (min-width: 60rem) {
    > aside, .page-aside { max-width: 25%; }
  }
}

.page {
  @include page-layout;
  @include page-components;
}

